Set up a base prototype for HUD components.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -672,6 +672,9 @@ properties: {
 
 	mana_regen_per_frame: 1,
 	max_mana: { type: "int", default: 5000 },
+	
+#-------------------------- hud controls --------------------------#
+	should_display_hud: { type: "bool", default: true }, #Level; used to trigger for fade_out_hud and fade_in_hud.
 
 },
 
