--- a/data/objects/gui-components/hud-components/ability_secondary_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_secondary_display.cfg
@@ -1,11 +1,7 @@
 //Show the currently selected ability, such as 'tongue' or 'firebreath'.
 {
 	id: "ability_secondary_display",
-	is_strict: true,
-	use_absolute_screen_coordinates: true,
-	serializable: false,
-	
-	zorder: "@include data/zorder.cfg:in_front_of_everything",
+	prototype: ["hud_component"],
 
 	properties: {
 		player: "level.player",
