--- a/data/objects/gui-components/hud-components/boss_progress_display.cfg
+++ b/data/objects/gui-components/hud-components/boss_progress_display.cfg
@@ -1,12 +1,9 @@
-//The mana bar displays how much energy for abilities we have.
+//show how many hitpoints either a boss, or a collection of multiple enemies representing a boss, has
 {
 	id: "boss_progress_display",
-	is_strict: true,
-	use_absolute_screen_coordinates: true,
+	prototype: ["hud_component"],
+
 	hidden_in_game: true,
-	serializable: false,
-	
-	zorder: "@include data/zorder.cfg:in_front_of_everything",
 	no_compile_image: "gui/progress-bar-center.png,gui/progress-bar-well-center.png",
 
 	properties: {
