--- a/data/objects/gui-components/hud-components/death_indicator_display.cfg
+++ b/data/objects/gui-components/hud-components/death_indicator_display.cfg
@@ -1,11 +1,7 @@
 //Show the currently selected ability, such as 'tongue' or 'firebreath'.
 {
 	id: "death_indicator_display",
-	is_strict: true,
-	use_absolute_screen_coordinates: true,
-	serializable: false,
-	
-	zorder: "@include data/zorder.cfg:in_front_of_everything",
+	prototype: ["hud_component"],
 
 	//Sync UI state with Frogatto.
 	on_process: "[
