--- a/data/objects/gui-components/hud-components/heart_display.cfg
+++ b/data/objects/gui-components/hud-components/heart_display.cfg
@@ -1,12 +1,9 @@
 //A health display, in the style of hearts. One hitpoint is half a heart.
 {
 	id: "heart_display",
-	is_strict: true,
-	use_absolute_screen_coordinates: true,
+	prototype: ["hud_component"],
+
 	hidden_in_game: true,
-	serializable: false,
-	
-	zorder: "@include data/zorder.cfg:in_front_of_everything",
 	zsub_order: -3,
 
 	properties: {
