--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -1,11 +1,8 @@
 {
 	id: "hud_gold_display",
-	is_strict: true,
-	use_absolute_screen_coordinates: true,
-	serializable: false,
+	prototype: ["hud_component"],
 	hidden_in_game: true,
 	
-	zorder: "@include data/zorder.cfg:in_front_of_everything",
 
 	properties: {
 		set_text: "def(string text) -> commands [set(txt, text), fire_event(me, 'create')]",
