--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1663,7 +1663,6 @@ properties: {
 	
 	swallowed_object: { type: "obj throwable|null", default: null},
 	
-	_should_display_hud: { type: "bool", default: true }, #Level; used to trigger for fade_out_hud and fade_in_hud.
 	
 		#-- items and achievements --#
 	enemies_seen: { type: "{string -> bool}", default: {} }, //A running tally of what kinds of enemies we've seen. Used for the inventory screen.
@@ -1902,7 +1901,7 @@ on_process: "[
 ]",
 
 on_draw: "[
-	if((_should_display_hud != should_display_hud_now) or (level.cycle < 20),
+	if((should_display_hud != should_display_hud_now) or (level.cycle < 20),
 		/*
 			Note a dependency here — to keep this from getting weird, the transitions need to be instant if we're at the launch of a level.  The fade-in animation for these is longer than the fade-out, so if a fade-in and a fade-out get triggered back-to-back, the fade-in's final effects will take precedence, which means the gui won't actually hide (since the final state applied will be the final frame of the longer-animation).  TODO:  This was noted to happen a few times on cutscenes at the start of a level, but if we continue to have problems with this, then we should probably 'pad' the fade-out animation with a secondary animation that just sets a constant value of 0, for 15 cycles after the actual one plays.
 		*/
@@ -1912,7 +1911,7 @@ on_draw: "[
 			if(level.cycle < 19, instantly_hide_hud, fade_out_hud)
 		)
 	),
-	set(_should_display_hud, should_display_hud_now),
+	set(should_display_hud, should_display_hud_now),
 ] where should_display_hud_now = (level.zoom_current = 1) and (not level.id in [
 	'titlescreen.cfg',
 	'titlescreen-new-game-selector.cfg',
