--- a/data/objects/gui-components/hud-components/mana_display.cfg
+++ b/data/objects/gui-components/hud-components/mana_display.cfg
@@ -1,12 +1,9 @@
 //The mana bar displays how much energy for abilities we have.
 {
 	id: "mana_display",
-	is_strict: true,
-	use_absolute_screen_coordinates: true,
+	prototype: ["hud_component"],
+
 	hidden_in_game: true,
-	serializable: false,
-	
-	zorder: "@include data/zorder.cfg:in_front_of_everything",
 	zsub_order: 1,
 	no_compile_image: "gui/progress-bar-center.png",
 
