--- a/data/objects/gui-components/hud-components/number_display.cfg
+++ b/data/objects/gui-components/hud-components/number_display.cfg
@@ -1,12 +1,8 @@
 //The mana bar displays how much energy for abilities we have.
 {
 	id: "number_display",
-	is_strict: true,
-	use_absolute_screen_coordinates: true,
+	prototype: ["hud_component"],
 	hidden_in_game: true,
-	serializable: false,
-	
-	zorder: "@include data/zorder.cfg:in_front_of_everything",
 
 	properties: {
 		target: "obj player_controlled <- lp asserting lp where lp = level.local_player", //Target object, to have it's information displayed.
