Set up the ability displays and the hud fading to use the alpha proxy value.  Set up a delay so that that recent changes to HUD hiding don't prevent the fade from working.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -674,7 +674,8 @@ properties: {
 	max_mana: { type: "int", default: 5000 },
 	
 #-------------------------- hud controls --------------------------#
-	should_display_hud: { type: "bool", default: true }, #Level; used to trigger for fade_out_hud and fade_in_hud.
+	should_display_hud: { type: "bool", default: true },	//used to trigger for fade_out_hud and fade_in_hud.
+	last_changed_should_display_hud: { type: "int", default: -20 },		//cycle for when we last adjusted the hud, to time-delay the hard-locking of alpha->0
 
 },
 
