--- a/data/objects/gui-components/hud-components/ability_display.cfg
+++ b/data/objects/gui-components/hud-components/ability_display.cfg
@@ -12,47 +12,47 @@
 		
 #-------------------------- components --------------------------#
 		super_indicator: {
-			type: "custom_obj",  
-			init: "object('${me.type}.super_indicator',0,0,1)",
+			type: "obj hud_component",  
+			init: "object('ability_display.super_indicator',0,0,1)",
 		},
 
 		graphic: {
-			type: "custom_obj",  
-			init: "object('${me.type}.graphic',0,0,1, {zsub_order: -1})",
+			type: "obj hud_component",  
+			init: "object('ability_display.graphic',0,0,1, {zsub_order: -1})",
 		},
 		
 		graphic_post1: {
-			type: "custom_obj",  
-			init: "object('${me.type}.graphic',0,0,1)",
+			type: "obj hud_component",  
+			init: "object('ability_display.graphic',0,0,1)",
 		},
 
 		graphic_post2: {
-			type: "custom_obj",  
-			init: "object('${me.type}.graphic',0,0,1)",
+			type: "obj hud_component",  
+			init: "object('ability_display.graphic',0,0,1)",
 		},
 
 		graphic_pre1: {
-			type: "custom_obj",  
-			init: "object('${me.type}.graphic',0,0,1)",
+			type: "obj hud_component",  
+			init: "object('ability_display.graphic',0,0,1)",
 		},
 
 		graphic_pre2: {
-			type: "custom_obj",  
-			init: "object('${me.type}.graphic',0,0,1)",
+			type: "obj hud_component",  
+			init: "object('ability_display.graphic',0,0,1)",
 		},
 
 		overlay: {
-			type: "custom_obj",  
-			init: "object('${me.type}.overlay',0,0,1)",
+			type: "obj hud_component",  
+			init: "object('ability_display.overlay',0,0,1)",
 		},
 
 
 #-------------------------- core behavior --------------------------#
-		max_graphic_cells: "[custom_obj] ::
+		max_graphic_cells: "[obj hud_component] ::
 							[graphic_pre2, graphic_pre1, graphic, graphic_post1, graphic_post2]",
 
 		
-		graphic_cells: "[custom_obj] :: max_graphic_cells[
+		graphic_cells: "[obj hud_component] :: max_graphic_cells[
 			/*
 				A little bit of black magic here, to start us deeper into the list so we get i.e. [graphic_pre1, graphic, graphic_post1] rather than [graphic_pre2, graphic_pre1, graphic].  Essentially we need it centered so that `graphic` is guaranteed to be in the set, somewhere.  The object represented by `graphic` specifically represents the current ability/powerup.
 			*/
@@ -63,7 +63,7 @@
 			lib.math.floor( (5 - size(player.ability_list)) / 2.0 )
 		)",
 
-		set_to_animation: "def( custom_obj target, [int,int,int,int] rect) -> commands
+		set_to_animation: "def(obj hud_component target, [int,int,int,int] rect) -> commands
 			set(target.animation, {
 				image: 'gui/hud4.png',
 				duration: -1,
@@ -78,7 +78,7 @@
 			map(graphic_cells, 
 				[
 					//debug(cycle),
-					set(value.alpha, 255),
+					set(value.alpha_proxy, 255),
 					set(value.mid_x, mid_x  + 90*index),
 					;
 					animate(value, {
@@ -90,7 +90,7 @@
 							replace_existing: true,
 							on_complete: anim2
 					}) where anim2 = animate(value, {
-							alpha: if(index = index(graphic_cells, graphic), 255, 0),
+							alpha_proxy: if(index = index(graphic_cells, graphic), 255, 0),
 							mid_x: mid_x ,
 							mid_y: mid_y ,
 						},{
@@ -120,7 +120,7 @@
 			set(super_indicator.relative_y, 0),
 			set(overlay.relative_x, 0),
 			set(overlay.relative_y, 0),
-			set(me.alpha, 0),
+			set(me.alpha_proxy, 0),
 		]",
 
 
@@ -192,11 +192,11 @@
 	
 	object_type: [
 		{
+			"@base": true,
+			prototype: ["hud_component"],
+		},
+		{
 			id: "graphic",
-			is_strict: true,
-			use_absolute_screen_coordinates: true,
-			serializable: false,
-			zorder: "@include data/zorder.cfg:in_front_of_everything",
 			zsub_order: -2,
 			
 			animation: [{
@@ -218,10 +218,6 @@
 
 		{
 			id: "frame",
-			is_strict: true,
-			use_absolute_screen_coordinates: true,
-			serializable: false,
-			zorder: "@include data/zorder.cfg:in_front_of_everything",
 			zsub_order: 0,
 			
 			animation: [{
@@ -233,10 +229,6 @@
 
 		{
 			id: "overlay",
-			is_strict: true,
-			use_absolute_screen_coordinates: true,
-			serializable: false,
-			zorder: "@include data/zorder.cfg:in_front_of_everything",
 			zsub_order: 2,
 			
 			animation: [{
@@ -249,10 +241,6 @@
 		
 		{
 			id: "super_indicator",
-			is_strict: true,
-			use_absolute_screen_coordinates: true,
-			serializable: false,
-			zorder: "@include data/zorder.cfg:in_front_of_everything",
 			zsub_order: 1,
 			
 			animation: {
