--- a/data/objects/gui-components/hud-components/heart_display.cfg
+++ b/data/objects/gui-components/hud-components/heart_display.cfg
@@ -96,10 +96,7 @@
 	
 	object_type: [{
 		id: "icon",
-		always_active: true,
-		use_absolute_screen_coordinates: true,
-		serializable: false,
-		zorder: "@include data/zorder.cfg:in_front_of_everything",
+		prototype: ["hud_component"],
 		zsub_order: -10,
 		
 		
