--- a/data/objects/gui-components/hud-components/mana_display.cfg
+++ b/data/objects/gui-components/hud-components/mana_display.cfg
@@ -80,11 +80,8 @@
 	
 	object_type: [{
 			"@base": true,
-			serializable: false,
-			zorder: "@include data/zorder.cfg:in_front_of_everything",
+			prototype: ["hud_component"],
 			zsub_order: 2,
-			is_strict: true,
-			use_absolute_screen_coordinates: true,
 		},
 		{
 			id: "bar_container",	
