--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1513,47 +1513,47 @@ properties: {
 
 	fade_out_hud: "[
 		[
-			animate(c, { alpha: 0, scale: 1.0/(level.zoom * 2) }, { duration: 10, easing: lib.math.ease_in_out_cubic }) 
-			| c <- level.chars, (c.use_absolute_screen_coordinates and (not c.type in hud_types_omitted_from_scaling))
+			animate(c, { alpha_proxy: 0, scale: 1.0/(level.zoom * 2) }, { duration: 10, easing: lib.math.ease_in_out_cubic }) 
+			| c <- level.chars, (c is obj hud_component and (not c.type in hud_types_omitted_from_scaling))
 		],
 		[
-			animate(c, { alpha: 0 }, { duration: 5, easing: lib.math.ease_in_out_cubic }) 
-			| c <- level.chars, (c.use_absolute_screen_coordinates and (c.type in hud_types_omitted_from_scaling))
+			animate(c, { alpha_proxy: 0 }, { duration: 5, easing: lib.math.ease_in_out_cubic }) 
+			| c <- level.chars, (c is obj hud_component and (c.type in hud_types_omitted_from_scaling))
 		],
 		
 	]",
 	
 	instantly_hide_hud: "[
 		[
-			[set(c.alpha, 0), set(c.scale, 0)]
-			| c <- level.chars, (c.use_absolute_screen_coordinates and (not c.type in hud_types_omitted_from_scaling))
+			[set(c.alpha_proxy, 0), set(c.scale, 0)]
+			| c <- level.chars, (c is obj hud_component and (not c.type in hud_types_omitted_from_scaling))
 		],
 		[
-			[set(c.alpha, 0)]
-			| c <- level.chars, (c.use_absolute_screen_coordinates and (c.type in hud_types_omitted_from_scaling))
+			[set(c.alpha_proxy, 0)]
+			| c <- level.chars, (c is obj hud_component and (c.type in hud_types_omitted_from_scaling))
 		],
 	]",
 	
 	
 	fade_in_hud:  "commands :: [
 		[
-			animate(c, { alpha: 255, scale: 1 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
-			| c <- level.chars, (c.use_absolute_screen_coordinates and (not c.type in hud_types_omitted_from_scaling))
+			animate(c, { alpha_proxy: 255, scale: 1 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
+			| c <- level.chars, (c is obj hud_component and (not c.type in hud_types_omitted_from_scaling))
 		],
 		[
-			animate(c, { alpha: 255 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
-			| c <- level.chars, (c.use_absolute_screen_coordinates and (c.type in hud_types_omitted_from_scaling))
+			animate(c, { alpha_proxy: 255 }, { duration: 20, easing: lib.math.ease_in_out_cubic }) 
+			| c <- level.chars, (c is obj hud_component and (c.type in hud_types_omitted_from_scaling))
 		],
 	]",
 	
 	instantly_show_hud:  "commands :: [
 		[
-			[set(c.alpha, 255), set(c.scale, 1)]
-			| c <- level.chars, (c.use_absolute_screen_coordinates and (not c.type in hud_types_omitted_from_scaling))
+			[set(c.alpha_proxy, 255), set(c.scale, 1)]
+			| c <- level.chars, (c is obj hud_component and (not c.type in hud_types_omitted_from_scaling))
 		],
 		[
-			[set(c.alpha, 255)]
-			| c <- level.chars, (c.use_absolute_screen_coordinates and (c.type in hud_types_omitted_from_scaling))
+			[set(c.alpha_proxy, 255)]
+			| c <- level.chars, (c is obj hud_component and (c.type in hud_types_omitted_from_scaling))
 		],
 	]",
 
@@ -1912,6 +1912,7 @@ on_draw: "[
 		)
 	),
 	set(should_display_hud, should_display_hud_now),
+	if(should_display_hud != should_display_hud_now, set(last_changed_should_display_hud, level.cycle)),
 ] where should_display_hud_now = (level.zoom_current = 1) and (not level.id in [
 	'titlescreen.cfg',
 	'titlescreen-new-game-selector.cfg',
