Made the hud gold display's children into hud_component heirs.

--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -51,10 +51,8 @@
 	
 	object_type: {
 		id: "coin_icon",
-		always_active: true,
-		use_absolute_screen_coordinates: true,
-		serializable: false,
-		zorder: "@include data/zorder.cfg:in_front_of_everything",
+		prototype: ["hud_component"],
+
 		
 		on_end_anim: "animation('normal')",
 		
