Moved the state tracking for the boss list to the player object, because when we re-initialize the HUD, it wipes that out, and we re-initialize the HUD on a fairly regular basis (including when potions get drunk).

--- a/data/object_prototypes/general/standing_npc.cfg
+++ b/data/object_prototypes/general/standing_npc.cfg
@@ -99,7 +99,7 @@ on_end_anim: "if(not animation in core_anims, animation(animation),   if(_paused
 	
 
 on_interact: "
-	if(not frogatto.gui_boss_progress_display.boss_list, [
+	if(not frogatto.boss_list, [
 		set(level.zoom, 2), 
 		do_pause,
 	
