--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -676,6 +676,7 @@ properties: {
 #-------------------------- hud controls --------------------------#
 	should_display_hud: { type: "bool", default: true },	//used to trigger for fade_out_hud and fade_in_hud.
 	last_changed_should_display_hud: { type: "int", default: -20 },		//cycle for when we last adjusted the hud, to time-delay the hard-locking of alpha->0
+	boss_list: { type: "[obj hittable]", default: [], persistent: false },
 
 },
 
