--- a/data/objects/gui-components/hud-components/boss_progress_display.cfg
+++ b/data/objects/gui-components/hud-components/boss_progress_display.cfg
@@ -14,10 +14,9 @@
 			set(last_displayed_value, 0.0),                             //And set the length to zero, so the bar starts off empty
 		]",
 		
-		reset_boss_list: "commands :: set(me.boss_list, [])",
+//		reset_boss_list: "commands :: set(me.boss_list, [])",
 		
-		//potential_bosses: "[obj hittable] :: filter(level.chars, value is obj hittable and value.is_a_boss)",
-		boss_list: { type: "[obj hittable]", default: [] },
+//		boss_list: { type: "[obj hittable]", default: [] },
 
 
 
@@ -136,8 +135,8 @@
 		/*
 			'direct' in the sense that half the time, we're doing a cached or time-delayed value.  This isn't that - this is reading the values directly from the "source of truth".
 		*/
-		direct_boss_max_hp: "fold([int]<-map(me.boss_list, value.max_hitpoints), a+b)",
-		direct_boss_hp: "fold([int]<-map(me.boss_list, value.hitpoints), a+b)",
+		direct_boss_max_hp: "fold([int]<-map(level.player.boss_list, value.max_hitpoints), a+b)",
+		direct_boss_hp: "fold([int]<-map(level.player.boss_list, value.hitpoints), a+b)",
 
 
 
@@ -166,7 +165,7 @@
 	
 	on_being_removed: "hide_bar",
 	
-	on_player_death: "reset_boss_list",
+//	on_player_death: "reset_boss_list",
 	
 	on_process: "[
 		[
@@ -178,7 +177,7 @@
 				draw_bar,
 				[
 					set(recent_max_hitpoints, 0),
-					set(boss_list,[]),
+					set(level.player.boss_list,[]),
 					hide_bar,
 				]
 			),
