--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -19,13 +19,13 @@
 		vertical_full_offset: "decimal :: 90",
 		vertical_offset: "vertical_full_offset * lib.math.ease_in_out_elastic(ratio)
 		
-			where ratio = (1.0 - min(1.0, decimal(level.cycle -  (last_changed_coins + delay) )/display_timeout ))
+			where ratio = (1.0 - min(1.0, decimal(me.cycle -  (last_changed_coins + delay) )/display_timeout ))
 			where delay = 200",
 		
 		poll_for_coin_changes: "if(comparison_point_for_coins != level.player.coins,
 									[
 										set(comparison_point_for_coins, level.player.coins),
-										set(last_changed_coins, level.cycle),
+										set(last_changed_coins, me.cycle),
 									]
 								)",
 								
