--- a/data/level/Forest/mushroom-boss.cfg
+++ b/data/level/Forest/mushroom-boss.cfg
@@ -59,7 +59,11 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_489702f6",
-			"on_triggered": "if(level.player.get_stored_event('mushroom_boss_fight_won') = null, fire_event(get_object_or_die(level,'the_mushroom_boss'), 'begin_fight'))",
+			"on_triggered": "if(level.player.get_stored_event('mushroom_boss_fight_won') = null, [
+				fire_event(get_object_or_die(level,'the_mushroom_boss'), 'begin_fight')
+				;
+				remove_object(me)
+			])",
 			"property_data": {
 				"_x2_bound": 832,
 				"_x_bound": 624,
