Improve the module's validate_objects' error message.

--- a/module.cfg
+++ b/module.cfg
@@ -26,9 +26,9 @@
 	"min_engine_version": 1.4,
 	"name": "Frogatto & Friends",
 	"player_type": "obj player_controlled",
-	"validate_objects": "def(map definition, [string] protos) ->string|null
+	"validate_objects": "def(map definition, [string] protos) -> string|null
 		if((definition.solid_area or definition.platform_area) and 'cosmetic_effects' not in protos,
-			'objects with solid_area or platform_area must be derived from cosmetic_effects'
+			'objects with solid_area or platform_area must be derived from `cosmetic_effects`. Object is derived from: ' + protos + '.'
 		)
 	",
 	"version": [
