Adjusted milgram's hp to something more in line with intentions (changes to the standard_thrown_damage weren't reflected in him, basically resulting in an 8x surge in hp values when that got nerfed.

--- a/data/objects/enemies/bosses/milgram.cfg
+++ b/data/objects/enemies/bosses/milgram.cfg
@@ -10,12 +10,16 @@ hitpoints: 6000,
 solid_area: [17,15,47,65],
 
 properties: {
+	#-------------------------- constructor/destructor logic --------------------------#
+		epihittable_obj_constructor: "commands :: [
+			set_max_hitpoints({casual: standard_thrown_damage * 16, challenging: standard_thrown_damage * 28}),
+		]",
+
 	flinch_threshold: "99999999",
 	points_value: 10000,
 	armor: "40",
 	taxonomy: "TaxonomyType :: enum neutral",
 	team: "'evil'",
-	setup: "[	if( (not higher_difficulty), set(max_hitpoints, 2800)) ]", 
 	attack_damage: "if(higher_difficulty,4,2)",
 	
 	title: "~Milgram~",
