--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -504,7 +504,7 @@ properties: {
 	last_toggled_ability: { type: "int", default: -10 },
 	last_toggled_secondary_item: { type: "int", default: -10 },
 
-
+    last_focused_panel_index: { type: "int", default: 0 }, // for storing inventory pane index
 
 	toggle_ability_by_category: "def( enum { left, right } direction, ItemCategory category ) -> commands
 				if( size(the_item_list) > 0,
