--- a/data/objects/gui-components/inventory-screen/inventory_screen_controller_2.cfg
+++ b/data/objects/gui-components/inventory-screen/inventory_screen_controller_2.cfg
@@ -178,7 +178,11 @@ properties: {
 	]",	
 	
 	process_individual_keypresses: "commands :: map(active_inputs, switch(value,
-		enum close,				if(cycle > 1, die()),
+		enum close,				if(cycle > 1,
+                                [
+									set(frogatto.last_focused_panel_index, focused_panel_index),
+                                    die(),
+                                ]),
 		enum pane_left,			slide_to_relative_panel(-1),
 		enum pane_right,		slide_to_relative_panel(1),
 		enum pane_left,			slide_to_relative_panel(-1),
@@ -266,11 +270,12 @@ on_create: "[ //TODO: restore Frogatto's cycle to what it was before the menu
 	if(not pause_level, set(frogatto.control_lock, [])),
 
 	add_all_panels,
-		
+	
+    set(focused_panel_index, frogatto.last_focused_panel_index), //restore currently open panel index in the player    
+    
 	add_scroll_arrows(),
 	
-		
-	;snap_to_panel( if(idx, idx, 0 ) where idx = panel_index_by_type('bestiary_pane') ),
+	;snap_to_panel(focused_panel_index),
 ]",
 
 //To auto-reload this, add spawn('inventory_screen_controller_2', 0,0,1), to frogatto's on_process. (I can't figure out how to re-spawn the object from this event.) Use only if pause_level is set to true!
