Added a provision so the hud components based in the upper-right can correctly re-scale themselves based on the current screen width, if we have a situation where the screen aspect ratio is changing.

--- a/data/objects/gui-components/hud-components/death_indicator_display.cfg
+++ b/data/objects/gui-components/hud-components/death_indicator_display.cfg
@@ -9,6 +9,11 @@
 			set(me.alpha, if(level.player.sanitized_player_has_died_since_last_unique_checkpoint, 255, 0))
 		)
 	]",
+
+	on_window_resize: "set(xy, [new_pos.x, new_pos.y])
+		where new_pos = {x:screen_w - 20*2,y:0}
+		where screen_w = level.camera_position[2]",
+
 	
 	animation: {
 		id: "bg", //black bg, goes behind overlay
