--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -38,6 +38,10 @@
 
 	on_create: "[text(txt, font, size, align), add_object(coin_icon), set(coin_icon.relative_x, 60), set(coin_icon.relative_y, 8)]",
 
+	on_window_resize: "set(xy, [new_pos.x, new_pos.y])
+		where new_pos = {x:screen_w - 66*2,y:50}
+		where screen_w = level.camera_position[2]",
+
 
 	//Sync UI state with Frogatto.
 	on_process: "[
