Set up the gold display to also fade its text during HUD changes.

--- a/data/object_prototypes/base/hud_component.cfg
+++ b/data/object_prototypes/base/hud_component.cfg
@@ -19,6 +19,7 @@
 			set: "[
 				set(_data, value),
 				set(alpha, if(is_hud_visible, value, 0)),
+				set(me.text_alpha, if(is_hud_visible, value, 0)),
 			]",
 			persistent: false,
 		},
