--- a/data/objects/gui-components/hud-components/hud_gold_display.cfg
+++ b/data/objects/gui-components/hud-components/hud_gold_display.cfg
@@ -46,7 +46,9 @@
 	//Sync UI state with Frogatto.
 	on_process: "[
 		if(level.player is obj frogatto_playable, [
-			me.set_text( str(level.player.coins) + '×'),
+			me.set_text( str(level.player.coins) + '×')
+			;
+			set(text_alpha, alpha_proxy),
 			poll_for_coin_changes,
 			set_vertical_pos,
 		])
