Fixed a typo in prospera's workshop.

--- a/data/level/Forest/prosperas-workshop.cfg
+++ b/data/level/Forest/prosperas-workshop.cfg
@@ -170,7 +170,7 @@
 				speech_dialog(
 									set(prospera.facing, -1),
 									execute(prospera, [set(prospera.animation, 'emote_cross_arms'); sleep_until_animation_finished(); set(prospera.animation, 'emote_talk_with_arms_crossed')]),
-						prospera,	[~So, this the workshop.\\nDo be careful not to touch anything.~],
+						prospera,	[~So, this is the workshop.\\nDo be careful not to touch anything.~],
 									set(frogatto.animation, 'emote_confused'),
 						frogatto,	[~Afraid of fingerprints?~],
 									set(prospera.animation, 'emote_talk_with_arms_crossed'),
