Added a conversation for berd on ravenish ravine.

--- a/data/level/Forest/ravenish-ravine.cfg
+++ b/data/level/Forest/ravenish-ravine.cfg
@@ -88,6 +88,26 @@
 							Frogatto,	[~You're right, I'm sorry.~],
 						)],
 					]) where Berd = me, where Frogatto = level.player",
+
+			"on_talk": "speech_dialog(
+							set(level.player.animation, 'emote_confused'),
+				Frogatto,	[~So in all seriousness, what we we doing now?\\nWhere am I going again?~],
+							set(Berd.animation, 'emote_wry'), 
+				Berd,		[~Well, I do say, if you look to our east…\\nyou'll notice something quite curious.~],
+							set(Berd.animation, 'emote_talk'),
+							[~Beyond that, for our broader plan, here,\\nI think you'd be well served to continue that way.~],
+							set(Berd.animation, 'emote_gesticulate'),
+							[~To our east, I believe there's a cave opening.~],
+							set(Berd.animation, 'emote_confused'),
+							[~If I know my geography, they make a straight\\nshot into the mountains under Milgram's Castle.~],
+							set(level.player.animation, 'emote_confused'),
+				Frogatto,	[~How big are these caves?~],
+							set(Berd.animation, 'emote_gesticulate'),
+				Berd,		[~Enormous.  Like an underground highway.~],
+							set(level.player.animation, 'emote_raisedfinger'),
+				Frogatto,	[~Neat!~],
+		) where Berd = me, where Frogatto = level.player",
+				
 			"type": "berd_npc",
 			"x": -512,
 			"y": -1217
