Fixed an issue where Berd's conversation options made no sense if you accessed the relative respite level chunk he's on without beating the mushroom boss.

--- a/data/level/Forest/relative-respite.cfg
+++ b/data/level/Forest/relative-respite.cfg
@@ -547,6 +547,7 @@
 				[
 					lib.audio.play_music(me,'DreamlandJourney.ogg'),
 					remove_object(me),
+					remove_object( get_object_or_die(level, 'berd_man') ),
 				],
 				[
 					set(level.player.mid_xy, me.mid_xy)
