added platforms to pillar_exterior_decoration4.cfg

--- a/data/objects/props/exterior-generic/pillar_exterior_decoration4.cfg
+++ b/data/objects/props/exterior-generic/pillar_exterior_decoration4.cfg
@@ -1,7 +1,8 @@
 {
 id: "pillar_exterior_decoration4",
 zorder: "@include data/zorder.cfg:interior_shelves_and_stairs",
-
+prototype: ["cosmetic_effects"],
+platform_area: [24,12,72,12],
 editor_info: {
 	category: "decor, exterior",
 },
