Made Frogatto use level.window_size instead of level.camera_position.
(level.camera_position now reflects the size of the camera, which isn't much use for absolutely positioned objects.)

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1426,7 +1426,7 @@ properties: {
 	},
 	gui_death_indicator_display: {
 		type: "obj death_indicator_display", 
-		init: "object('death_indicator_display', 0, 0, {x:screen_w - 20*2,y:0}) where screen_w = level.camera_position[2]",
+		init: "object('death_indicator_display', 0, 0, {x:screen_w - 20*2,y:0}) where screen_w = level.window_size[0]",
 		persistent: false,
 	},
 	gui_mana_display: {
@@ -1436,12 +1436,12 @@ properties: {
 	},
 	gui_boss_progress_display: {
 		type: "obj boss_progress_display", 
-		init: "object('boss_progress_display', 0, level.camera_position[3] - 27 /*gear icon center*/ - 10 /*margin*/, {})",
+		init: "object('boss_progress_display', 0, level.window_size[1] - 27 /*gear icon center*/ - 10 /*margin*/, {})",
 		persistent: false,
 	},
 	gui_gold_display: {
 		type: "obj hud_gold_display", 
-		init: "object('hud_gold_display', 0, 0, {x:screen_w - 66*2,y:50}) where screen_w = level.camera_position[2]",
+		init: "object('hud_gold_display', 0, 0, {x:screen_w - 66*2,y:50}) where screen_w = level.window_size[0]",
 		persistent: false,
 	},
 	
