Per Anura's commits e372f76a0 and a9849bd95, renamed some level variables.

--- a/data/object_prototypes/base/standard_values.cfg
+++ b/data/object_prototypes/base/standard_values.cfg
@@ -42,8 +42,8 @@ properties: {
 	level_zoom: {
 		type: "decimal",
 		variable: false, 
-		get: "level.instant_zoom",
-		set: "set(level.zoom, value)",
+		get: "level.zoom_current",
+		set: "set(level.zoom_instant, value)",
 	},
 
 	camera_mid_pos: {
