Fixed water shader bounds calculation not respecting level.zoom.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -428,8 +428,8 @@
 
 		draw: "[//Load dynamic level information into the shader.
 			//Level information.
-			set(uniform_commands.u_camera_pos, level.camera_position),
-			set(uniform_commands.u_zoom, level.zoom),
+			set(uniform_commands.u_camera_pos, pos),
+			set(uniform_commands.u_zoom, zoom),
 			
 			//Water rect information.
 			set(uniform_commands.u_water_count, size(waters)),
@@ -439,10 +439,17 @@
 		asserting not -1 in water_types | 'Unknown liquid found to shade, please add it below. (In [${map(waters, value.type)}])'
 		where 
 			water_rects = [[
-				water._x_bound  - pos[0],
-				water._y_bound  - pos[1], 
-				water._x2_bound - pos[0], 
-				water._y2_bound - pos[1]
+				//Since we get water rects in level coordinates, and we want to transform them into zoomed screen coordinates for our shader (because the shader is processed at the wrong step of the pipeline in level.cpp - it's only done *after* zoom is applied) we must take the following steps:
+				//1. Find the offset of the water bounds from the current visual center.
+				//vvvvvvvvvvvvvvv vvvvvvvvvvvvvvvvvvvvvv
+				//2. Scale those x-bounds from the visual center by level.zoom.
+				//                                       vvvvvvv
+				//3. Convert from current visual center to screen-space coordinates.
+				//                                               vvvvvvvvvv
+				((water._x_bound  - (pos[0] + win[0]/2)) * zoom) + win[0]/2,
+				((water._y_bound  - (pos[1] + win[1]/2)) * zoom) + win[1]/2,
+				((water._x2_bound - (pos[0] + win[0]/2)) * zoom) + win[0]/2,
+				((water._y2_bound - (pos[1] + win[1]/2)) * zoom) + win[1]/2 
 			] | water <- waters],
 			water_types = [switch(true,
 				water is obj water_controller,        0,
@@ -459,9 +466,14 @@
 				| water <- level.chars,
 				  water is obj liquid,
 				  rects_intersect(camera_rect, [water._x_bound, water._y_bound, water._x2_bound, water._y2_bound])
-			] where camera_rect = [pos[0], pos[1], pos[0]+pos[2], pos[1]+pos[3]]
+			] where camera_rect = [pos[0]-scale_margin[0], pos[1]-scale_margin[1], pos[0]+win[0]+scale_margin[0], pos[1]+win[1]+scale_margin[1]]
+			  where scale_margin = [(pos[2]-win[0])/2, (pos[3]-win[1])/2]
+			  //🠙 To find the camera_rect, _adjusting for zoom,_ we take the unscaled camera rect and add the difference between the unscaled and scaled camera size.
+			  //  The alternative to this would be to calculate the distances from the center of the camera based on the current camera size.
 		)[:8]
-		where pos = level.camera_position"
+		where pos = level.camera_position,
+		      win = level.window_size,
+		      zoom = level.zoom_current"
 	},
 
 	{
