Doing a big rework of the standing/walking npc turn logic, to fix a major bug, and better express intent.

--- a/data/object_prototypes/general/walking_npc.cfg
+++ b/data/object_prototypes/general/walking_npc.cfg
@@ -30,6 +30,7 @@ properties: {
 		_target: { type: "int|null", default: null },					//If we are walking to a target, this is it.
 		_target_callback: { type: "null|function()->commands", default: null },		//The event to fire, when we reach the target. (Will be fired in addition to reach_target.)
 
+		_is_walking: { type: "bool", default: true },
 
 #-------------------------- behavior --------------------------#
 	begin_pacing: "[
@@ -60,37 +61,60 @@ properties: {
 			set(start_mode, 'walk')
 		])",
 
-	start_pottering: "[if(1d2,start_standing,turn_around), if(level.cycle - _last_started_pottering > potter_timeout, set(_last_started_pottering,level.cycle))]",
+	start_pottering: "[
+		if(1d2,
+			start_standing,
+			turn_around
+		),
+		if(level.cycle - _last_started_pottering > potter_timeout,
+			set(_last_started_pottering,level.cycle)
+		)
+	]",
 		
 	do_regular_behavior: "if(start_mode = 'stand', start_standing, start_walking)",
 	core_anims: "[string] :: ['stand','turn','walk']",
-	
-	start_walking: "commands ::
-						if(should_turn,
-							if(should_potter,
-								start_pottering,
-								turn_around
-							),
-							if(should_potter,
-								start_pottering,
-								if(_current_special_walk_anim != '',
-									animation(_current_special_walk_anim),
-									animation('walk')
-								)
-							)
-						)",
+
+	start_standing: "commands :: [
+		set(_is_walking, false),
+		start_standing__standing_npc_behavior
+	]",
+
+
+	start_walking: "commands :: [
+		set(_is_walking, true),
+		if(should_turn,
+			if(should_potter,
+				start_pottering,
+				turn_around
+			),
+			if(should_potter,
+				start_pottering,
+				if(_current_special_walk_anim != '',
+					animation(_current_special_walk_anim),
+					animation('walk')
+				)
+			)
+		)
+	]",
 	
 	should_turn: "bool ::	if(level.cycle - _last_turned > 10,
 								if(not _target,
+									/*
+										If we don't have a target, then we've got some pretty tame/normal turning behavior. Basically we just look at a pair of bounding limits for where we're allowed to walk, and if we're outside of those, then we need to turn around and go back.  We make a similar caveat for cliffs, treating them like limits.
+										
+										If we're inside those limits, we need to revert to the logic of the standing NPC.
+									*/
 									if(turns_at_cliff and (not is_there_flat_ground_ahead_of_us(cliff_margin)),
 										true,
 										if(is_outside_limits,
 											true,
-											false
+											should_turn__standing_npc_behavior
 										)
 									)
 										where margin = 50
 										where cliff_margin = 110,
+
+
 									/* 
 										if we DO have a target, then all the above rules are off; go ahead and walk off cliffs, or leave our bounds, the target is more important.
 									*/
@@ -134,7 +158,15 @@ properties: {
 },
 	
 
-on_create: "[do_regular_behavior, fire_event('enter_level')] asserting max_x > min_x",
+on_create: "[
+	if(start_mode = 'stand',
+		set(_is_walking, false),
+		set(_is_walking, true)
+	)
+	;
+	do_regular_behavior,
+	fire_event('enter_level'),
+] asserting max_x > min_x",
 					
 on_resume: "do_regular_behavior",
 
