--- a/data/object_prototypes/general/standing_npc.cfg
+++ b/data/object_prototypes/general/standing_npc.cfg
@@ -35,23 +35,42 @@ properties: {
 #-------------------------- core functionality --------------------------#
 	standing_animations: "[string] :: ['stand']", //a list of walking animations - inheritors may supply more than this
 
-	start_standing: "if(animation not in ['turn'] or time_in_animation >= animation_obj.total_animation_time,
-							 do_stand_or_turn_behavior
-					)",
-	do_stand_or_turn_behavior: "switch(turning_behaviour,
-									'face_player', turn_towards_player,
-									'random', if(not 1d2-1 and should_turn, turn_around, change_to_stand_anim),
-									'never', change_to_stand_anim
-								)",
+	start_standing: "commands :: start_standing__standing_npc_behavior",
+	start_standing__standing_npc_behavior: 
+		"commands :: if(animation not in ['turn'] or time_in_animation >= animation_obj.total_animation_time,
+			do_stand_or_turn_behavior
+		)",
+
+	do_stand_or_turn_behavior: "if(should_turn,
+		turn_around,
+		change_to_stand_anim,
+	)",
 	
 	change_to_stand_anim: "if(animation in standing_animations, set(animation,animation), animation('stand'))",
 	
 	do_pause: "commands :: [change_to_stand_anim, set(_paused,true)]",
 	do_resume: "commands :: [fire_event('resume'), set(_paused,false)]",
 
-	should_turn: "bool :: (level.cycle - _last_turned > 10)",
-	turn_around: "commands :: [if('turn' in available_animations, animation('turn')), set(facing, -facing), set(_last_turned, level.cycle)]",
-	turn_towards_player: "commands :: if(not is_facing_towards_player and should_turn, turn_around, change_to_stand_anim)",
+
+
+#-------------------------- turning criterion --------------------------#
+	can_turn: "bool :: (level.cycle - me._last_turned > 10)",
+
+	should_turn: "bool :: should_turn__standing_npc_behavior",
+
+	should_turn__standing_npc_behavior: "bool :: switch(turning_behaviour,
+		'face_player', if(not is_facing_towards_player, true, false),
+		'random', if(not 1d2-1, true, false),
+		'never', false
+	)",
+
+
+	turn_around: "commands :: if(can_turn,
+		[if('turn' in available_animations, animation('turn')), set(facing, -facing), set(_last_turned, level.cycle)],
+		change_to_stand_anim
+	)",
+
+
 
 		//a formula that can be used to draw the character's attention to an object, and make them do whatever in response to it.
 	consider_object: {type: "string", default: "null" },
