--- a/data/level/Forest/forgotten-falls.cfg
+++ b/data/level/Forest/forgotten-falls.cfg
@@ -3840,6 +3840,76 @@
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
 		{
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs
+,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
+lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
+lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
+lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
+lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
+,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
+,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs
+,,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs
+,,,lfs,lfs,lfs,lfs
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": ",lfs",
+			"variations": "",
+			"x": -800,
+			"x_speed": 103,
+			"y": -1952,
+			"y_speed": 103,
+			"zorder": "background_parallax_forest_leaves"
+		},
+		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr
